--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -34,3 +34,107 @@ body {
     padding-right: 10px;
   }
 }
+
+/*--------exploration des reseration-------*/
+$color-primaire: #9356dc;
+$color-secondaire: #ff79da;
+$color-tertiaire: #99e2d0;
+
+.reservation {
+  text-align: center;
+  background-color: #fafafa;
+  padding: 30px;
+  padding-bottom: 35px;
+  &-titre {
+    margin: 0px;
+    font-size: 25px;
+  }
+  &-texte {
+    margin: 15px;
+    font-weight: 300;
+  }
+}
+
+.bouton-explorer {
+  border-radius: 30px;
+  border: 0px;
+  font-size: 17px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 18px;
+  padding-left: 18px;
+  margin-top: 10px;
+  color: white;
+  background-image: linear-gradient(175deg, $color-secondaire, $color-primaire);
+  cursor: pointer;
+  &:hover {
+    opacity: 0.4;
+    transition-duration: 0.7s;
+  }
+}
+/*--------fonctionnement-------*/
+@mixin fonctionnement-box {
+  border: 2px solid #fafafa;
+  border-radius: 20px 20px 20px 20px;
+}
+
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+  &-total {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  &-onglet {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    @include fonctionnement-box;
+    align-items: center;
+    background-color: #fafafa;
+    height: 55px;
+    box-shadow: -1px 1px 15px 0px rgba(178, 172, 172, 0.75);
+    margin-bottom: 20px;
+  }
+}
+
+.fonctionnement-numero {
+  display: flex;
+  position: relative;
+  left: -10px;
+  border: 2px solid $color-primaire;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 15px;
+  border-radius: 49%;
+  background-color: $color-primaire;
+  color: white;
+}
+
+.fonctionnement-logo {
+  padding-left: 13px;
+  color: #646464;
+  font-size: 17px;
+}
+
+.fonctionnement-paragraphe {
+  padding-left: 15px;
+  font-weight: 500;
+}
+
+.fonctionnement-onglet:hover {
+  transition-duration: 0.6s;
+  background-color: rgba(147, 86, 220, 0.2);
+  cursor: default;
+  border: 2px solid rgba(146, 86, 220, 0);
+}
+
+.titre-fonctionnement {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
