--- a/style.css
+++ b/style.css
@@ -37,4 +37,101 @@ body {
   padding-right: 10px;
 }
 
+/*--------exploration des reseration-------*/
+.reservation {
+  text-align: center;
+  background-color: #fafafa;
+  padding: 30px;
+  padding-bottom: 35px;
+}
+.reservation-titre {
+  margin: 0px;
+  font-size: 25px;
+}
+.reservation-texte {
+  margin: 15px;
+  font-weight: 300;
+}
+
+.bouton-explorer {
+  border-radius: 30px;
+  border: 0px;
+  font-size: 17px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 18px;
+  padding-left: 18px;
+  margin-top: 10px;
+  color: white;
+  background-image: linear-gradient(175deg, #ff79da, #9356dc);
+  cursor: pointer;
+}
+.bouton-explorer:hover {
+  opacity: 0.4;
+  transition-duration: 0.7s;
+}
+
+/*--------fonctionnement-------*/
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+.fonctionnement-total {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.fonctionnement-onglet {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  border: 2px solid #fafafa;
+  border-radius: 20px 20px 20px 20px;
+  align-items: center;
+  background-color: #fafafa;
+  height: 55px;
+  box-shadow: -1px 1px 15px 0px rgba(178, 172, 172, 0.75);
+  margin-bottom: 20px;
+}
+
+.fonctionnement-numero {
+  display: flex;
+  position: relative;
+  left: -10px;
+  border: 2px solid #9356dc;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 15px;
+  border-radius: 49%;
+  background-color: #9356dc;
+  color: white;
+}
+
+.fonctionnement-logo {
+  padding-left: 13px;
+  color: #646464;
+  font-size: 17px;
+}
+
+.fonctionnement-paragraphe {
+  padding-left: 15px;
+  font-weight: 500;
+}
+
+.fonctionnement-onglet:hover {
+  transition-duration: 0.6s;
+  background-color: rgba(147, 86, 220, 0.2);
+  cursor: default;
+  border: 2px solid rgba(146, 86, 220, 0);
+}
+
+.titre-fonctionnement {
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
