--- a/Menu-css/menu-la-note-enchante.css
+++ b/Menu-css/menu-la-note-enchante.css
@@ -1,3 +1,223 @@
+@charset "UTF-8";
+/*--------paramettre grosse partie-----*/
+body {
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
+}
 
+h2 {
+  font-family: "Shrikhand", sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  font-weight: 300;
+}
+
+/*--------header-------*/
+.head {
+  display: flex;
+  justify-content: center;
+  height: 70px;
+  position: sticky;
+  box-shadow: 0px 1px 10px -1px rgba(0, 0, 0, 0.25);
+}
+
+.head-logo {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  margin: auto;
+  width: 196px;
+  height: 80px;
+}
+
+.retours {
+  font-size: 18px;
+  color: black;
+}
+
+.icon-retours {
+  display: flex;
+  align-items: center;
+  position: relative;
+  right: -23px;
+}
+
+/*-------banniere-----*/
+.banniere {
+  height: 242px;
+  width: 100%;
+  object-fit: cover;
+}
+
+/*-----menu------*/
+.menu {
+  position: relative;
+  border: 2px solid #f2f2f2;
+  margin-top: -50px;
+  padding-top: 15px;
+  background-color: #f2f2f2;
+  border-radius: 34px 34px 0px 0px;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.head-menu {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.head-menu-titre {
+  padding-left: 19px;
+  font-weight: 600;
+}
+
+/*-------coeur restaurant--------*/
+@keyframes delay {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.coeurcheck {
+  display: flex;
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.coeurcheck input[type=checkbox],
+.coeurcheck .check {
+  display: none;
+}
+
+.coeurcheck input[type=checkbox]:checked ~ .check {
+  display: inline-block;
+  color: rgba(255, 255, 255, 0);
+}
+
+.coeurcheck input[type=checkbox]:checked ~ .uncheck {
+  display: none;
+}
+
+.fas {
+  background: linear-gradient(to bottom, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.uncheck:hover {
+  transition-duration: 0.6s;
+  transform: scale(1.2);
+}
+
+/*----fin coeur restaurant-----*/
+/*--------entrée-------*/
+.titre-section {
+  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-left: 16px;
+  margin-bottom: 19px;
+}
+
+.choix-box {
+  display: flex;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  border-radius: 12px;
+  box-shadow: -1px 1px 10px 0px rgba(226, 221, 221, 0.75);
+  overflow: hidden;
+  margin-bottom: 15px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.titre-plat {
+  font-size: 16px;
+  margin: 0px;
+  margin-bottom: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.ingredient {
+  margin: 0px;
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.prix {
+  display: flex;
+  align-items: flex-end;
+  font-size: 15px;
+  font-weight: 500;
+  margin-right: 20px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.titreETingredient {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow: hidden;
+  flex-grow: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.confirmation {
+  display: flex;
+  justify-content: center;
+  width: 60px;
+  margin-right: -64px;
+  align-items: center;
+  background-color: #99e2d0;
+  border-radius: 0px 12px 12px 0px;
+  flex-shrink: 0;
+  transition-duration: 0.6s;
+}
+
+.logo-confirmation {
+  display: flex;
+  color: #99e2d0;
+  background-color: white;
+  border-radius: 100px;
+  width: 20px;
+  height: 20px;
+  transform: rotate(360deg);
+  transition-duration: 0.5s;
+}
+
+.icon-centre {
+  margin-left: 3px;
+  margin-top: 4px;
+  font-size: 13px;
+}
+
+.choix-box:hover .confirmation {
+  transition-duration: 0.6s;
+  margin-right: -1px;
+}
+.choix-box:hover .logo-confirmation {
+  transition-duration: 0.7s;
+  transform: rotate(0);
+}
 
 /*# sourceMappingURL=menu-la-note-enchante.css.map */
