--- a/sass/menu-delice-des-sens.scss
+++ b/sass/menu-delice-des-sens.scss
@@ -321,3 +321,40 @@ $color-tertiaire: #99e2d0;
   margin-left: 20px;
   padding-bottom: 10px;
 }
+/*------------apparition-anim---------*/
+
+.apparition1 {
+  animation: delay 1s;
+}
+
+.apparition2 {
+  animation: delay 2s;
+}
+
+.apparition3 {
+  animation: delay 3s;
+}
+
+.apparition4 {
+  animation: delay 4s;
+}
+
+.apparition5 {
+  animation: delay 5s;
+}
+
+.apparition6 {
+  animation: delay 6s;
+}
+
+.apparition7 {
+  animation: delay 7s;
+}
+
+.apparition8 {
+  animation: delay 8s;
+}
+
+.apparition9 {
+  animation: delay 9s;
+}
