--- a/Menu-css/menu-palette-du-gout.css
+++ b/Menu-css/menu-palette-du-gout.css
@@ -1,7 +1,25 @@
+@charset "UTF-8";
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
   font-family: "Roboto", sans-serif;
+}
+
+h2 {
+  font-family: "Shrikhand", sans-serif;
+}
+
+p {
+  font-weight: 300;
+}
+
+.entree-plat-dessert {
+  display: flex;
+  flex-direction: column;
+}
+
+a {
+  text-decoration: none;
 }
 
 /*--------header-------*/
@@ -39,6 +57,263 @@ body {
   max-height: 512px;
   width: 100%;
   object-fit: cover;
+}
+
+/*-------coeur restaurant--------*/
+@keyframes delay {
+  from {
+    transform: translateY(10px);
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.coeurcheck {
+  display: flex;
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.coeurcheck input[type=checkbox],
+.coeurcheck .check {
+  display: none;
+}
+
+.coeurcheck input[type=checkbox]:checked ~ .check {
+  display: inline-block;
+  color: rgba(255, 255, 255, 0);
+}
+
+.coeurcheck input[type=checkbox]:checked ~ .uncheck {
+  display: none;
+}
+
+.fas {
+  background: linear-gradient(to bottom, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+.uncheck:hover {
+  transition-duration: 0.6s;
+  transform: scale(1.2);
+}
+
+/*----fin coeur restaurant-----*/
+/*-----menu------*/
+.menu {
+  position: relative;
+  border: 2px solid #f2f2f2;
+  margin-top: -50px;
+  padding-top: 15px;
+  background-color: #f2f2f2;
+  border-radius: 34px 34px 0px 0px;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+.head-menu {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.head-menu-titre {
+  padding-left: 19px;
+}
+
+/*--------entrée-------*/
+.titre-section {
+  font-weight: 300;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding-left: 16px;
+  margin-bottom: 19px;
+}
+
+.titre-section1::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  position: absolute;
+  left: 17px;
+  bottom: 961px;
+}
+
+.titre-section2::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  position: absolute;
+  left: 17px;
+  bottom: 665px;
+}
+
+.titre-section3::after {
+  content: "";
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+  position: absolute;
+  left: 17px;
+  bottom: 368px;
+}
+
+.choix-box {
+  display: flex;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  width: 95%;
+  border-radius: 12px;
+  box-shadow: -1px 1px 10px 0px rgba(226, 221, 221, 0.75);
+  overflow: hidden;
+  margin-bottom: 15px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.titre-plat {
+  font-size: 16px;
+  margin: 0px;
+  margin-bottom: 5px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.ingredient {
+  margin: 0px;
+  font-size: 15px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.prix {
+  display: flex;
+  align-items: flex-end;
+  font-size: 15px;
+  font-weight: 500;
+  margin-right: 20px;
+  overflow: hidden;
+  flex-shrink: 0;
+}
+
+.titreETingredient {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow: hidden;
+  flex-grow: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.confirmation {
+  display: flex;
+  justify-content: center;
+  width: 60px;
+  margin-right: -64px;
+  align-items: center;
+  background-color: #99e2d0;
+  border-radius: 0px 12px 12px 0px;
+  flex-shrink: 0;
+  transition-duration: 0.6s;
+}
+
+.logo-confirmation {
+  display: flex;
+  color: #99e2d0;
+  background-color: white;
+  border-radius: 100px;
+  width: 20px;
+  height: 20px;
+  transform: rotate(360deg);
+  transition-duration: 0.5s;
+}
+
+.icon-centre {
+  margin-left: 3px;
+  margin-top: 4px;
+  font-size: 13px;
+}
+
+.choix-box:hover .confirmation {
+  transition-duration: 0.6s;
+  margin-right: -1px;
+}
+.choix-box:hover .logo-confirmation {
+  transition-duration: 0.7s;
+  transform: rotate(0);
+}
+
+/*-------plat-------*/
+.plat {
+  margin-top: 10px;
+}
+
+/*-------desserts-------*/
+.dessert {
+  margin-top: 10px;
+}
+
+/*-----bouton-commander------*/
+.commander {
+  border-radius: 30px;
+  border: 0px;
+  font-size: 17px;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 43px;
+  padding-left: 43px;
+  margin-top: 10px;
+  color: white;
+  background-image: linear-gradient(175deg, #ff79da, #9356dc);
+  cursor: pointer;
+}
+.commander:hover {
+  opacity: 0.4;
+  transition-duration: 0.7s;
+}
+
+.bouton-commander {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 67px;
+}
+
+/*------footer---------*/
+#footer-titre {
+  font-family: "Shrikhand", sans-serif;
+  color: white;
+  margin-bottom: 14px;
+  margin-top: 13px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer {
+  background-color: #353535;
+}
+
+.footer-lien {
+  color: white;
+  margin-bottom: 8px;
+}
+
+.footer-total {
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+  margin-left: 20px;
+  padding-bottom: 10px;
 }
 
 /*# sourceMappingURL=menu-palette-du-gout.css.map */
