--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ a {
 .head-logo {
   display: flex;
   text-align: center;
-  width: 196px;
   height: 80px;
 }
 
@@ -38,6 +37,20 @@ a {
   padding-right: 10px;
 }
 
+.restaurant-paragraphe {
+  font-weight: 500;
+  color: #504d4d;
+  font-size: 18px;
+}
+
+.icon-localisation {
+  color: #504d4d;
+  display: flex;
+  position: relative;
+  left: -11px;
+  top: -2px;
+}
+
 /*--------exploration des reseration-------*/
 .reservation {
   text-align: center;
@@ -51,7 +64,9 @@ a {
 }
 .reservation-texte {
   margin: 15px;
-  font-weight: 300;
+  font-weight: 350;
+  font-size: 18px;
+  color: #6f6969;
 }
 
 .bouton-explorer {
@@ -62,7 +77,8 @@ a {
   padding-bottom: 13px;
   padding-right: 18px;
   padding-left: 18px;
-  margin-top: 10px;
+  box-shadow: -4px 9px 15px -10px rgba(0, 0, 0, 0.72);
+  margin-top: 12px;
   color: white;
   background-image: linear-gradient(175deg, #ff79da, #9356dc);
   cursor: pointer;
@@ -128,6 +144,10 @@ a {
   background-color: rgba(147, 86, 220, 0.2);
   cursor: default;
   border: 2px solid rgba(146, 86, 220, 0);
+}
+.fonctionnement-onglet:hover .icon-fonctionnement {
+  color: #9356dc;
+  transition-duration: 0.6s;
 }
 
 .titre-fonctionnement {
@@ -249,7 +269,7 @@ a {
 
 /*----fin coeur restaurant-----*/
 .titre-restaurant {
-  margin-left: 30px;
+  margin-left: 15px;
   padding-top: 50px;
   font-size: 28px;
 }
