correction des détail + animation palette du gout

--- a/sass/menu-palette-du-gout.scss
+++ b/sass/menu-palette-du-gout.scss
@@ -325,3 +325,38 @@ $color-tertiaire: #99e2d0;
   margin-left: 20px;
   padding-bottom: 10px;
 }
+.apparition1 {
+  animation: delay 1s;
+}
+
+.apparition2 {
+  animation: delay 2s;
+}
+
+.apparition3 {
+  animation: delay 3s;
+}
+
+.apparition4 {
+  animation: delay 4s;
+}
+
+.apparition5 {
+  animation: delay 5s;
+}
+
+.apparition6 {
+  animation: delay 6s;
+}
+
+.apparition7 {
+  animation: delay 7s;
+}
+
+.apparition8 {
+  animation: delay 8s;
+}
+
+.apparition9 {
+  animation: delay 9s;
+}
