correction accueil pour chrome

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -20,6 +20,7 @@ a {
   display: flex;
   text-align: center;
   height: 80px;
+  width: 196px;
 }
 /*-------recherche restaurant------*/
 .restaurant-local {
