--- a/style.css
+++ b/style.css
@@ -235,12 +235,11 @@ a {
 
 /*-------coeur restaurant--------*/
 .coeurcheck {
-  display: flex;
-  justify-content: end;
   margin-top: -36px;
   font-size: 22px;
   margin-right: 23px;
   cursor: pointer;
+  margin-left: auto;
 }
 
 .coeurcheck input[type=checkbox],
