--- a/style.css
+++ b/style.css
@@ -154,15 +154,16 @@ a {
   padding-bottom: 13px;
   padding-right: 18px;
   padding-left: 18px;
-  box-shadow: -4px 9px 15px -10px rgba(0, 0, 0, 0.72);
+  box-shadow: -4px 9px 15px -10px rgba(0, 0, 0, 0.5);
   margin-top: 12px;
   color: white;
   background-image: linear-gradient(175deg, #ff79da, #9356dc);
   cursor: pointer;
 }
 .bouton-explorer:hover {
-  opacity: 0.4;
-  transition-duration: 0.7s;
+  opacity: 0.7;
+  transition-duration: 0.4s;
+  box-shadow: -4px 9px 15px -10px black;
 }
 
 /*--------fonctionnement-------*/
