--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -260,6 +260,16 @@ a {
 .footer-total {
   @include footer-total;
 }
+
+.footer-icon {
+  padding-right: 14px;
+  font-size: 13px;
+}
+
+.footer-icon2 {
+  padding-right: 10px;
+  font-size: 12px;
+}
 /*---------animation apparition------*/
 @keyframes delay {
   from {
