Revue des soulignement decoratif

--- a/Menu-css/styles-menu.css
+++ b/Menu-css/styles-menu.css
@@ -106,6 +106,7 @@ a {
   margin-right: auto;
   width: 100%;
   box-sizing: border-box;
+  height: 1097.23px;
 }
 
 .head-menu {
@@ -134,7 +135,7 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 962px;
+  top: 129px;
 }
 
 .titre-section2::after {
@@ -144,7 +145,7 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 666px;
+  top: 423px;
 }
 
 .titre-section3::after {
@@ -154,7 +155,7 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 368px;
+  top: 717px;
 }
 
 .choix-box {
@@ -375,7 +376,7 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 1039px;
+  bottom: 1041px;
 }
 
 .titre-section-enchante-2::after {
@@ -385,7 +386,7 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 664px;
+  bottom: 670px;
 }
 
 .titre-section-enchante-3::after {
@@ -395,13 +396,28 @@ a {
   background-color: #99e2d0;
   position: absolute;
   left: 17px;
-  bottom: 367px;
+  bottom: 375px;
 }
 
 .banniere-note-enchante {
   max-height: 512px;
   width: 100%;
   object-fit: cover;
+}
+
+.menu-enchante {
+  position: relative;
+  border: 2px solid #f2f2f2;
+  margin-top: -50px;
+  padding-top: 15px;
+  background-color: #f2f2f2;
+  border-radius: 34px 34px 0px 0px;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  box-sizing: border-box;
+  height: 1174.83px;
 }
 
 /*-------banniere responsive----*/
