--- a/Menu-css/styles-menu.css
+++ b/Menu-css/styles-menu.css
@@ -2,7 +2,7 @@
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
-  max-height: 1812.5;
+  max-height: 1812.5px;
   font-family: "Roboto", sans-serif;
 }
 
