--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -2,7 +2,7 @@
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
-  max-height: 1812.5;
+  max-height: 1812.5px;
   font-family: "Roboto", sans-serif;
 }
 
