--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -2,7 +2,6 @@
 /*--------paramettre grosse partie-----*/
 body {
   margin: 0px;
-  max-height: 1812.5px;
   font-family: "Roboto", sans-serif;
 }
 
@@ -91,7 +90,6 @@ a {
   @include marginRightLeftAuto;
   width: 100%;
   box-sizing: border-box;
-  height: 1097.23px;
 }
 
 .head-menu {
@@ -104,6 +102,7 @@ a {
 
 /*--------entrée-------*/
 .titre-section {
+  position: relative;
   font-weight: 300;
   font-size: 16px;
   text-transform: uppercase;
@@ -114,19 +113,7 @@ a {
 .titre-section1::after {
   @include titre-section;
   left: 17px;
-  top: 129px;
-}
-
-.titre-section2::after {
-  @include titre-section;
-  left: 17px;
-  top: 423px;
-}
-
-.titre-section3::after {
-  @include titre-section;
-  left: 17px;
-  top: 717px;
+  top: 22px;
 }
 
 .choix-box {
@@ -229,6 +216,7 @@ a {
   color: white;
   background-image: linear-gradient(175deg, $color-secondaire, $color-primaire);
   cursor: pointer;
+  transition-duration: 0.5s;
   &:hover {
     opacity: 0.7;
     transition-duration: 0.4s;
@@ -262,7 +250,6 @@ a {
 .footer-total {
   @include footer-total;
 }
-
 .footer-icon {
   padding-right: 14px;
   font-size: 13px;
@@ -292,39 +279,10 @@ a {
 
 /*----------juste pour note enchante-------*/
 
-.titre-section-enchante-1::after {
-  @include titre-section;
-  left: 17px;
-  bottom: 1041px;
-}
-.titre-section-enchante-2::after {
-  @include titre-section;
-  left: 17px;
-  bottom: 670px;
-}
-.titre-section-enchante-3::after {
-  @include titre-section;
-  left: 17px;
-  bottom: 375px;
-}
 .banniere-note-enchante {
   max-height: 512px;
   width: 100%;
   object-fit: cover;
-}
-
-.menu-enchante {
-  position: relative;
-  border: 2px solid #f2f2f2;
-  margin-top: -50px;
-  padding-top: 15px;
-  background-color: #f2f2f2;
-  border-radius: 34px 34px 0px 0px;
-  max-width: 1300px;
-  @include marginRightLeftAuto;
-  width: 100%;
-  box-sizing: border-box;
-  height: 1174.83px;
 }
 
 /*-------banniere responsive----*/
