--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,12 +18,15 @@ a {
   }
 }
 
-@keyframes visibilité {
+@keyframes visibilite {
   from {
+    opacity: 1;
     visibility: visible;
   }
   to {
+    opacity: 0;
     visibility: hidden;
+    transform: scale(2);
   }
 }
 
@@ -33,16 +36,16 @@ a {
   z-index: 9999;
   height: 100%;
   width: 100%;
-  cursor: wait;
   font-family: "Shrikhand", sans-serif;
-  animation: visibilité 2.7s;
-  visibility: hidden;
+  animation: visibilite 2.6s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
   background-color: black;
 }
 
 .lettre {
   font-size: 35px;
-  margin-left: 5px;
+  letter-spacing: 0.2em;
   background-image: linear-gradient(25deg, $color-secondaire, $color-primaire);
   background-clip: text;
   -webkit-background-clip: text;
@@ -139,6 +142,7 @@ a {
   color: white;
   background-image: linear-gradient(175deg, $color-secondaire, $color-primaire);
   cursor: pointer;
+  transition-duration: 0.5s;
   &:hover {
     opacity: 0.7;
     transition-duration: 0.4s;
@@ -169,6 +173,7 @@ a {
     height: 55px;
     box-shadow: -1px 1px 15px 0px rgba(178, 172, 172, 0.75);
     margin-bottom: 20px;
+    transition-duration: 0.7s;
   }
 }
 
@@ -189,6 +194,7 @@ a {
   padding-left: 13px;
   color: #646464;
   font-size: 17px;
+  transition-duration: 0.7s;
 }
 
 .fonctionnement-paragraphe {
@@ -203,8 +209,12 @@ a {
   border: 2px solid rgba(146, 86, 220, 0);
   .icon-fonctionnement {
     color: $color-primaire;
-    transition-duration: 00.6s;
+    transition-duration: 0.6s;
   }
+}
+
+.icon-fonctionnement {
+  transition-duration: 0.7s;
 }
 
 .titre-fonctionnement {
@@ -243,6 +253,11 @@ a {
   border-radius: 15px;
   margin-bottom: 30px;
   position: relative;
+  transition-duration: 0.3s;
+  &:hover {
+    transition-duration: 0.3s;
+    transform: scale(0.95);
+  }
 }
 
 .restaurant-box2 {
@@ -255,6 +270,11 @@ a {
   border-radius: 15px;
   margin-bottom: 30px;
   position: relative;
+  transition-duration: 0.3s;
+  &:hover {
+    transition-duration: 0.3s;
+    transform: scale(0.95);
+  }
 }
 
 .restaurant-box-x2 {
