--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -130,11 +130,7 @@ a {
 }
 
 .bouton-explorer {
-  border-radius: 30px;
-  border: 0px;
-  font-size: 17px;
-  padding-top: 13px;
-  padding-bottom: 13px;
+  @include button;
   padding-right: 18px;
   padding-left: 18px;
   box-shadow: -4px 9px 15px -10px rgba(0, 0, 0, 0.5);
