--- a/sass/_var-mix.scss
+++ b/sass/_var-mix.scss
@@ -47,6 +47,18 @@ $color-footer: #353535;
   justify-content: space-between;
 }
 
+@mixin carteRestaurant {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 325px;
+  border-bottom: 2px solid white;
+  background-color: white;
+  border-radius: 15px;
+  margin-bottom: 30px;
+  position: relative;
+  transition-duration: 0.3s;
+}
 @mixin titre-section {
   content: "";
   width: 40px;
