--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -240,16 +240,8 @@ a {
 }
 
 .restaurant-box {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 325px;
-  border-bottom: 2px solid white;
-  background-color: white;
-  border-radius: 15px;
-  margin-bottom: 30px;
-  position: relative;
-  transition-duration: 0.3s;
+  @include carteRestaurant;
+
   &:hover {
     transition-duration: 0.3s;
     transform: scale(0.95);
@@ -257,16 +249,8 @@ a {
 }
 
 .restaurant-box2 {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 325px;
-  border-bottom: 2px solid white;
-  background: white;
-  border-radius: 15px;
-  margin-bottom: 30px;
-  position: relative;
-  transition-duration: 0.3s;
+  @include carteRestaurant;
+
   &:hover {
     transition-duration: 0.3s;
     transform: scale(0.95);
