--- a/style.css
+++ b/style.css
@@ -288,7 +288,7 @@ a {
   width: 100%;
   height: 325px;
   border-bottom: 2px solid white;
-  background: white;
+  background-color: white;
   border-radius: 15px;
   margin-bottom: 30px;
   position: relative;
