--- a/style.css
+++ b/style.css
@@ -173,8 +173,10 @@ a {
 .fonctionnement {
   display: flex;
   flex-direction: column;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  max-width: 1450px;
+  margin: auto;
 }
 .fonctionnement-total {
   display: flex;
